updated:状态栏样式更新
还未实现自定义缩小、放大、关闭

--- a/src/renderer/styles/index.scss
+++ b/src/renderer/styles/index.scss
@@ -25,3 +25,11 @@ body {
 .ft-14{
   font-size: 14px;
 }
+
+.title-wrap-red{
+  background-color: $light-red;
+}
+
+.title-wrap-green{
+  background-color: $green;
+}
