--- a/src/renderer/styles/index.scss
+++ b/src/renderer/styles/index.scss
@@ -7,6 +7,7 @@ html,body{
 }
 
 body {
+  background-color: $red;
   font-family: "Helvetica Neue", Helvetica, "PingFang SC", "Hiragino Sans GB", "Microsoft YaHei", "微软雅黑", Arial, sans-serif;
 }
 
@@ -27,13 +28,15 @@ body {
 }
 
 .title-wrap-red{
-  background-color: $light-red;
+  background-color: $red;
 }
 
 .title-wrap-green{
   background-color: $green;
 }
 
-.display-flex{
-  display: flex;
+.wrapper{
+  width: 100%;
+  height: 100%;
+  background-color: $red;
 }
